<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <Button
        android:id="@+id/submitStory"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/dark_gray"
        android:background="@android:color/white"
        android:text="Add Story"
        android:layout_alignParentBottom="true"
        android:textSize="26sp"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >

        <ImageView
            android:id="@+id/story_image"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:scaleType="fitXY"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/dark_gray"
            />


            <ImageView
                android:id="@+id/story_video"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/light_gray" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >


            <ImageButton
                android:id="@+id/add_image_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/story_image"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/add_image"
                android:src="@drawable/camera"
                android:background="@android:color/transparent"
                android:textColor="#bab9b9"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:shadowRadius="5"
                />



            <ImageButton
                android:id="@+id/add_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/story_image"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/add_image"
                android:src="@drawable/video"
                android:background="@android:color/transparent"
                android:textColor="#bab9b9"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:shadowRadius="5"
                />


        </LinearLayout>

        <EditText
            android:id="@+id/story_caption"
            android:hint="@string/enter_caption"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLength="30"
            android:background="@android:color/white"
            android:padding="20dp"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:textSize="24sp"
            android:textStyle="bold"
            />





        <EditText
            android:id="@+id/story_description"
            android:hint="@string/enter_description"
            android:layout_below="@id/story_caption"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:minLines="1"
            android:ems="10"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:padding="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:textSize="24sp"
            android:textStyle="bold"

            />


    </LinearLayout>

    </ScrollView>


</RelativeLayout>

